--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="武漢肺炎最新數據及資料整合 by ivanng2014"
-    />
+    <meta name="description" content="武漢肺炎數據及資料整合 by ivanng2014" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>武漢肺炎最新數據及資料整合</title>
+    <title>武漢肺炎數據及資料整合</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
