added global page

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
       rel="icon"
       href="https://img.icons8.com/material/480/coronavirus.png"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="武漢肺炎數據及資料整合 by ivanng2014" />
