update to metadata

--- a/public/index.html
+++ b/public/index.html
@@ -17,18 +17,31 @@
     </script>
 
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://img.icons8.com/material/480/coronavirus.png"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="武漢肺炎數據及資料整合 by ivanng2014" />
+    <meta
+      name="description"
+      content="武漢肺炎|此網站整合本港及國際公開數據，為你提供新型冠狀病毒在全球及本港擴散的最新趨勢及持續更新數據分析。"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      property="og:title"
+      content="香港武漢肺炎持續更新數據分析 - COVID-19"
+    />
+    <meta property="og:url" content="https://www.coronahk.info" />
+    <meta
+      property="og:description"
+      content="武漢肺炎|此網站整合本港及國際公開數據，為你提供新型冠狀病毒在全球及本港擴散的最新趨勢及持續更新數據分析。"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="zh_HK" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -43,7 +56,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>武漢肺炎數據及資料整合</title>
+    <title>
+      香港武漢肺炎持續更新數據分析 - Covid-19 Hong Kong Data Analysis
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
