added school and other stuff

--- a/public/index.html
+++ b/public/index.html
@@ -26,17 +26,17 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="武漢肺炎|此網站整合本港及國際公開數據，為你提供新型冠狀病毒在全球及本港擴散的最新趨勢及持續更新數據分析。"
+      content="COVID-19|此網站整合本港及國際公開數據，為你提供新型冠狀病毒在全球及本港擴散的最新趨勢及持續更新數據分析。"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <meta
       property="og:title"
-      content="香港武漢肺炎持續更新數據分析 - COVID-19"
+      content="香港COVID-19持續更新數據分析 - COVID-19"
     />
     <meta property="og:url" content="https://www.coronahk.info" />
     <meta
       property="og:description"
-      content="武漢肺炎|此網站整合本港及國際公開數據，為你提供新型冠狀病毒在全球及本港擴散的最新趨勢及持續更新數據分析。"
+      content="COVID-19|此網站整合本港及國際公開數據，為你提供新型冠狀病毒在全球及本港擴散的最新趨勢及持續更新數據分析。"
     />
     <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
     <meta property="og:type" content="article" />
@@ -57,7 +57,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      香港武漢肺炎持續更新數據分析 - Covid-19 Hong Kong Data Analysis
+      香港COVID-19持續更新數據分析 - Covid-19 Hong Kong Data Analysis
     </title>
   </head>
   <body>
